--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Shrews'
+- GITenberg
 title: Taxonomy and Distribution of Some American Shrews
 url: http://www.gutenberg.org/ebooks/31088
